# gambit

./: .editorconfig  .gitignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  databases.rst  example-results.csv  gambit.db.migrate.rst  gambit.db.models.rst  gambit.db.rst  gambit.db.sqla.rst  gambit.io.seq.rst  gambit.io.util.rst  gambit.metric.rst  gambit.util.rst  index.rst  install.rst  modules.rst  quickstart.rst  tutorial.rst
docs/source/api/: api.rst  cli.rst  database.rst  gambit.io.json.rst  gambit.io.rst  gambit.kmers.rst  gambit.rst  gambit.test.rst  (+7 more)
gambit/: __init__.py  classify.py  cluster.py  kmers.py  metric.py  query.py  search.py  seq.py  test.py
gambit/_cython/: kmers.pxd  kmers.pyx  metric.pxd  metric.pyx  test.pyx  types.pxd
gambit/cli/: __init__.py  common.py  context.py  debug.py  dist.py  query.py  root.py  signatures.py  test.py  tree.py  util.py
gambit/db/: __init__.py  fromfile.py  gambitdb.py  models.py  refdb.py  sqla.py
gambit/export/: archive.py  base.py  csv.py  json.py
gambit/io/: __init__.py  json.py  seq.py  util.py
gambit/query/: __init__.py  classify.py  params.py  results.py  run.py
gambit/results/: archive.py  csv.py  json.py  test.py
gambit/signatures/: __init__.py  array.py  base.py  calc.py  convert.py  hdf5.py  meta.py  test.py
gambit/sigs/: __init__.py  base.py  calc.py  hdf5.py  meta.py  test.py
gambit/util/: __init__.py  dev.py  indexing.py  io.py  json.py  misc.py  progress.py
src/gambit/: __init__.py  __main__.py  classify.py  cluster.py  kmers.py  metric.py  query.py  results.py  seq.py
tests/: __init__.py  common.py  conftest.py  results.py  test_classify.py  test_cluster.py  test_cython.py  test_export.py  test_full_db.py  test_kmers.py  test_metric.py  test_misc.py  test_query.py  test_results.py  test_search.py  test_seq.py  test_test.py  test_tests_common.py  testdb.py
tests/benchmarks/: Readme.md  benchmark_search.py  benchmark_signatures.py
tests/cli/: common.py  test_cli_common.py  test_cli_dist.py  test_cli_query.py  test_cli_signatures.py  test_cli_tree.py  test_common.py  test_dist.py  test_query.py  test_signatures.py  test_tree.py
tests/db/: test_db_migrate.py  test_db_models.py  test_db_refdb.py  test_db_refdbdb.py  test_db_sqla.py  test_models.py  test_refdb.py  test_sqla.py
tests/export/: test_archive.py
tests/io/: test_export.py  test_io_export.py  test_io_json.py  test_io_results.py  test_io_seq.py  test_io_util.py  test_json.py  test_seq.py  test_util.py
tests/query/: test_classify.py  test_results.py
tests/signatures/: test_io_hdf5.py  test_signatures_array.py  test_signatures_calc.py  test_signatures_convert.py  test_signatures_hdf5.py
tests/sigs/: common.py  test_base.py  test_calc.py  test_convert.py  test_hdf5.py  test_sigs_array.py  test_sigs_base.py  test_sigs_calc.py  test_sigs_hdf5.py
tests/util/: test_indexing.py  test_io.py  test_misc.py  test_progress.py  test_typing.py  test_util_io.py  test_util_json.py  test_util_misc.py  test_util_progress.py
(+331 files in other folders)
