[metadata]
name = gambit
description = Genomic Approximation Method for Bacterial Identification and Tracking
version = attr: gambit.__version__
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = http://github.com/hesslab-gambit/gambit


[options]
packages = find:
zip_safe = false
include_package_data = true

python_requires = >= 3.7

setup_requires =
	Cython~=0.27

install_requires =
	numpy~=1.13
	sqlalchemy~=1.1
	biopython~=1.69
	alembic~=1.0
	attrs>=20
	cattrs~=1.0
	click>=7.0
	h5py~=3.0

tests_require =
	pytest


[options.entry_points]
console_scripts =
	gambit = gambit.cli:cli


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests gambit

# Run doctests on all modules (except __main__.py and alembic config directory)
addopts = --doctest-modules --ignore-glob "**/__main__.py" --ignore "gambit/db/migrate/alembic/"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
